# aspire-app

./: .env.template  .gitignore  Dockerfile  Dockerfile.dev  README.md  devParams.json  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  values.yaml
.devcontainer/: devcontainer.json
Docs/: API.md  LLM_AGENT.md
app/: main.py
app/app/: __init__.py  app.py
app/app/errors/: file_process_error.py  http_error.py  llm_response_error.py  user_info_error.py  validation_error.py
app/app/routes/: __init__.py  prompt.py  qas.py  question.py  quiz.py  root.py  student.py
app/app/templates/: authError.html  index.html  simulateLTILaunch.html
app/config/: config.py  environment.py  local-cert.pem  local-key.pem  localhost.pem  localhost_key.pem  sp-metadata-local.xml  sp.xml
app/domain/models/: client.py  (+15 more)
app/utils/: anonymization.py  permissions.py  personalization.py
fastapi_lti1p3/: README.md  __init__.py  auth_response_validator.py  dynamic_registration.py  enforce_auth.py  lti1p3.py  routes.py  utils.py
fastapi_lti1p3/config/: __init__.py  config.py
fastapi_lti1p3/errors/: __init__.py  base_error.py  config_errors.py  validation_errors.py
fastapi_lti1p3/events/: startup.py
fastapi_lti1p3/models/: LTI_registration.py  __init__.py  auth_validation.py  cache_models.py  query_params.py  settings.py
fastapi_lti1p3/protocols/: lti1p3.py
fastapi_lti1p3/session_cache/: __init__.py  data_store.py  session_cache.py
vue_dev/: package-lock.json  package.json  vue.config.js
vue_dev/public/: index.html
vue_dev/src/: App.vue  main.js
(+144 files in other folders)
